--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -299,6 +299,7 @@ deny 2a03:4000:66:15:18a0:6bff:fe90:3147;
 deny 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 deny 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
 deny 2a03:4000:7:dcc:14ac:f2ff:fea9:e4c7;
+deny 2a03:6f20:531::254;
 deny 2a03:e600:100::1;
 deny 2a03:e600:100::2;
 deny 2a03:e600:100::3;
@@ -561,7 +562,6 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
 deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:e300::23;
-deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
 deny 2a0d:bbc7:0:1::320;
