--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -211,6 +211,7 @@ set_real_ip_from 173.255.198.243;
 set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
+set_real_ip_from 176.58.89.182;
 set_real_ip_from 176.65.138.250;
 set_real_ip_from 176.65.143.138;
 set_real_ip_from 176.97.114.202;
@@ -539,6 +540,7 @@ set_real_ip_from 185.56.83.83;
 set_real_ip_from 185.67.82.114;
 set_real_ip_from 185.7.33.146;
 set_real_ip_from 185.82.219.109;
+set_real_ip_from 185.84.31.254;
 set_real_ip_from 188.165.200.97;
 set_real_ip_from 188.214.104.21;
 set_real_ip_from 188.239.191.25;
@@ -871,7 +873,6 @@ set_real_ip_from 23.154.177.11;
 set_real_ip_from 23.154.177.12;
 set_real_ip_from 23.154.177.13;
 set_real_ip_from 23.154.177.14;
-set_real_ip_from 23.154.177.15;
 set_real_ip_from 23.154.177.16;
 set_real_ip_from 23.154.177.17;
 set_real_ip_from 23.154.177.18;
@@ -1102,6 +1103,7 @@ set_real_ip_from 2a03:4000:66:15:18a0:6bff:fe90:3147;
 set_real_ip_from 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 set_real_ip_from 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
 set_real_ip_from 2a03:4000:7:dcc:14ac:f2ff:fea9:e4c7;
+set_real_ip_from 2a03:6f20:531::254;
 set_real_ip_from 2a03:e600:100::1;
 set_real_ip_from 2a03:e600:100::2;
 set_real_ip_from 2a03:e600:100::3;
@@ -1364,7 +1366,6 @@ set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
 set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:e300::23;
-set_real_ip_from 2a0d:8140:1fff:4a9a::1;
 set_real_ip_from 2a0d:bbc7:0:1::1df;
 set_real_ip_from 2a0d:bbc7:0:1::254;
 set_real_ip_from 2a0d:bbc7:0:1::320;
@@ -1486,7 +1487,6 @@ set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
-set_real_ip_from 45.137.99.14;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
 set_real_ip_from 45.138.16.178;
@@ -1497,6 +1497,7 @@ set_real_ip_from 45.138.16.239;
 set_real_ip_from 45.138.16.240;
 set_real_ip_from 45.138.16.248;
 set_real_ip_from 45.138.16.42;
+set_real_ip_from 45.138.16.70;
 set_real_ip_from 45.138.16.76;
 set_real_ip_from 45.138.87.142;
 set_real_ip_from 45.141.215.110;
@@ -1543,6 +1544,7 @@ set_real_ip_from 45.80.158.27;
 set_real_ip_from 45.80.158.69;
 set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.83.104.137;
+set_real_ip_from 45.83.21.193;
 set_real_ip_from 45.84.107.101;
 set_real_ip_from 45.84.107.172;
 set_real_ip_from 45.84.107.182;
@@ -1642,6 +1644,7 @@ set_real_ip_from 80.94.92.84;
 set_real_ip_from 80.94.92.92;
 set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
+set_real_ip_from 82.153.138.17;
 set_real_ip_from 82.197.182.161;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
