--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -130,7 +130,6 @@ deny 136.244.111.163;
 deny 138.59.18.110;
 deny 139.99.172.11;
 deny 139.99.8.57;
-deny 141.147.97.190;
 deny 141.164.38.67;
 deny 141.98.11.62;
 deny 142.171.12.88;
@@ -215,7 +214,6 @@ deny 176.58.89.182;
 deny 176.65.138.250;
 deny 176.65.143.138;
 deny 176.97.114.202;
-deny 177.153.51.238;
 deny 178.162.197.91;
 deny 178.17.170.144;
 deny 178.17.170.23;
@@ -874,7 +872,6 @@ deny 23.153.248.34;
 deny 23.154.177.10;
 deny 23.154.177.11;
 deny 23.154.177.12;
-deny 23.154.177.13;
 deny 23.154.177.14;
 deny 23.154.177.15;
 deny 23.154.177.16;
@@ -1369,6 +1366,7 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
 deny 2a0d:bbc7:0:1::320;
@@ -1490,6 +1488,7 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.132.246.245;
 deny 45.134.225.36;
+deny 45.137.99.14;
 deny 45.138.16.107;
 deny 45.138.16.113;
 deny 45.138.16.178;
@@ -1547,6 +1546,7 @@ deny 45.80.158.27;
 deny 45.80.158.69;
 deny 45.8.22.207;
 deny 45.83.104.137;
+deny 45.83.21.193;
 deny 45.84.107.101;
 deny 45.84.107.172;
 deny 45.84.107.182;
@@ -1643,6 +1643,7 @@ deny 80.94.92.84;
 deny 80.94.92.92;
 deny 81.16.33.42;
 deny 81.17.28.95;
+deny 81.56.50.166;
 deny 82.197.182.161;
 deny 82.221.128.191;
 deny 82.221.131.5;
